# kejiban

./: README.md  compose.yaml  kejiban.code-workspace
.github/workflows/: backend-ci.yaml
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/app/: main.py  reqres.py
backend/app/tests/: test_app.py
database/init/: create-table.sql
