[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 119
lint.select = [
    "E",   # pycodestyle
]
lint.ignore = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = [
  "."
]